2018-11-07  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed a problem with IMAP on port 993
	* check_ssl_cert: fixed a problem with newlines in the HTTP request

2018-11-05  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: CA file and directory support

2018-10-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed the HTTP request string

2018-10-18  eimamagi  <https://github.com/eimamagi>

	* check_ssl_cert: Allow to specify a client certificate key

2018-10-15  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (exec_with_timeout): fixed the check on the the return value

2018-08-10  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: disabling OCSP checks if no OCSP host is found

2018-07-20  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Applied a patch from Markus Frosch to fix the cleanup of temporary files

2018-07-01  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: do not trap on EXIT
	* check_ssl_cert: remove temporary file when no signals are trapped

2018-06-28  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed a bug in the deletion of temporary files when a signal is caught

2018-06-25  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: added a check to require OCSP stapling

2018-04-29  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Remooved the SNI name check patch (see #78)

2018-04-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Merged the SNI name check patch

2018-04-17  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Merged the --terse patch, added performance data to the terse output and reordered the help

2018-04-12  Matteo Corti  <matteo@corti.li>

	* Makefile: Checks if the copyright year is correct. make test is now dependent on make dist

2018-04-06  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added UTF8 output

2018-04-05  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added debugging output for cURL

2018-03-29  Matteo Corti  <matteo@corti.li>
