@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii foo.1
 .\"
-.TH "check_ssl_cert" 1 "November, 2018" "1.78.0" "USER COMMANDS"
+.TH "check_ssl_cert" 1 "November, 2018" "1.79.0" "USER COMMANDS"
 .SH NAME
 check_ssl_cert \- checks the validity of X.509 certificates
 .SH SYNOPSIS
@@ -122,7 +122,7 @@ path of the openssl binary to be used
 TCP port
 .TP
 .BR "-P,--protocol" " protocol"
-use the specific protocol: http (default), irc or smtp,pop3,imap,ftp,ldap (switch to TLS)
+use the specific protocol: http (default), irc or smtp,pop3,imap,imaps, ftp,ldap (switch to TLS)
 .TP
 .BR "-s,--selfsigned"
 allows self-signed certificates
