@@ -1,3 +1,5 @@
+2018-12-10 Version 1.79.0: Differentiate between IMAP on port 143 and IMAPS on port 993
+                           Fixed a vulnerability in the parsing of the certificate issuer
 2018-11-07 Version 1.78.0: Bug fixes in IMAP and HTTP requests
 2018-11-05 Version 1.77.0: CA file and directory support
 2018-10-19 Version 1.76.0: Sends a correct HTTP request
