@@ -1,3 +1,8 @@
+2018-12-11  Matteo Corti  <corti@macmini.home>
+
+	* check_ssl_cert: Differentiate IMAP with STARTTLS on port 143 and IMAPS on 993
+	* check_ssl_cert: Fixed a vulnerability in the parsing of the certificate issuer
+
 2018-11-07  Matteo Corti  <matteo@corti.li>
 
 	* check_ssl_cert: Fixed a problem with IMAP on port 993
